# HRSBench

./: .gitignore  README.md  pyproject.toml  run_hrs_benchmark.sh
dev/: prepare_box_color.py  prepare_box_counting.py  prepare_box_size.py  prepare_box_spatial.py
hrs_dataset/: color.jsonl  counting.jsonl  size.jsonl  spatial.jsonl
src/: README.md
src/colors/: hue_based_color_classifier.py
src/compositions/: calc_size_comp_acc.py  calc_spatial_relation_acc.py
src/counting/: calc_counting_acc.py
src/detection/UniDet-master/: demo.py
src/hrsbench/: __init__.py  cli.py  run_hrs_benchmark.sh
src/hrsbench/colors/: hue_based_color_classifier.py
src/hrsbench/colors/MaskDINO/demo/: demo.py
src/hrsbench/colors/MaskDINO/maskdino/modeling/pixel_decoder/ops/src/cuda/: ms_deform_attn_cuda.cu
src/hrsbench/compositions/: calc_size_comp_acc.py  calc_spatial_relation_acc.py
src/hrsbench/counting/: calc_counting_acc.py
src/hrsbench/hrs_dataset/: counting.jsonl  size.jsonl
