[project]
name = "hrsbench"
description = "HRS-Bench: Holistic, Reliable and Scalable Benchmark for Text-to-Image Models"
version = "0.1.0"
requires-python = "==3.12.*"
maintainers = [
    { name = "Wooyeol Lee", email = "wooyeol0519@snu.ac.kr" }
]
dependencies = [
    "detectron2",
    "ninja==1.13.0",
    "opencv-python>=4.12.0.88",
    "scipy>=1.16.1",
    "timm>=1.0.19",
    "torch==2.4.1",
    "torchvision==0.19.1",
]

[tool.uv.sources]
detectron2 = { git = "https://github.com/facebookresearch/detectron2" }
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true  # Restricts usage to explicitly pinned packages

[tool.uv.extra-build-dependencies]
detectron2 = ["setuptools", "torch"]


[tool.setuptools.packages.find]
where = ["src"]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
