[project]
name = "hrsbench"
description = "HRS-Bench: Holistic, Reliable and Scalable Benchmark for Text-to-Image Models"
version = "0.1.0"
requires-python = ">=3.11"
maintainers = [
    { name = "Wooyeol Lee", email = "wooyeol0519@snu.ac.kr" }
]
dependencies = [
    "detectron2",
    "gdown>=5.2.0",
    "ninja>=1.13.0",
    "opencv-python>=4.12.0.88",
    "scipy>=1.16.1",
    "timm>=1.0.19",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
]

[project.scripts]
run_hrsbench_eval = "hrsbench.cli:main"


[tool.uv.sources]
detectron2 = { git = "https://github.com/facebookresearch/detectron2" }
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"

[tool.uv.extra-build-dependencies]
detectron2 = ["setuptools", "torch"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hrsbench = [
    "detection/UniDet-master/configs/*",
    "detection/UniDet-master/datasets/label_spaces/*",
    "colors/MaskDINO/maskdino/modeling/pixel_decoder/ops/**",
    # wylee added
    "hrs_dataset/*", 
    "run_hrs_benchmark.sh"
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
